--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -570,3 +570,23 @@ issn = {0941-3790},
 language = {ngerman}
 }
 
+@article{Cho,
+author = {Cho, Adrian},
+title = {{AI systems aim to sniff out coronavirus outbreaks}},
+journal = {{Science}},
+volume = {368},
+pages = {810-811},
+year = {2020},
+issn = {1095-9203},
+language = {english}
+}
+
+@misc{Springer,
+title = {{Was künstliche Intelligenz zu Fall bringt}},
+author = {Springer, Michael},
+howpublished = {Spektrum.de},
+year = {2020},
+note = {Zugegriffen am: 22.11.2020},
+url = {https://www.spektrum.de/kolumne/wie-das-coronavirus-computer-verwirrt/1744016#Echobox=1595235972?utm_source=pocket-newtab-global-de-DE},
+language = {ngerman}
+}
