--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -1045,7 +1045,9 @@ in die Planung von Predictive Analytics Anwendungen einzubeziehen.
 \subsection{Risiken bei der Datenerhebung}
 
 Trainingsdaten spiegeln nicht (mehr) das Verhalten des Systems wider.
-% corona beispiel
+% corona beispiel 
+
+Hier: \cite{Springer}
 
 \subsection{Risiken bei der Interpretation der Daten}
 
