--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -369,7 +369,10 @@ zunehmend automatisiert wird. Allerdings ändert der externe Druck die \glqq{Spi
 sich Predictive Analytics zunehmend etabliert.
 
 % TODO Missbrauch -> Proctor
-\subsection{Seuchenerkennung mit AI}
+\subsection{Seuchenerkennung}
+
+Der erste Alarm der wegen COVID-19 ausgelöst wurde, kam von einem Computersystem (vgl. \cite{Cho}, S.~810).
+
 
 % TODO
 % Google Flu Trends (vorerst gescheitert)
