--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -424,6 +424,9 @@ Weiterhin liegt der größte Wert eines solchen spieltheoretischen Modells darin
 (vgl. \cite{Poundstone}, S.~253). Für Probleme in der realen Welt können andere Faktoren wichtiger sein, was in den
 konkreten Fällen berücksichtigt werden muss.
 
+Schließlich können solche Betrachtungen helfen, zu erkennen, dass in manchen Situationen eine \glqq{Änderung der Spielregeln}\grqq{}
+benötigt wird, um die problematischen Szenarien aus den obigen Ausführungen zu vermeiden.
+
 \subsubsection{Alternative Spielvarianten}
 
 \begin{figure}%[!hbt]
