--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -91,15 +91,14 @@ author = {Crossman, Ashley},
 title = {Definition of Self-Fulfilling Prophecy in Sociology},
 howpublished = {ThoughtCo},
 year = {2020},
-note = {Accessed: 23.06.2020},
+note = {Accessed: 22.11.2020},
 url = {https://www.thoughtco.com/self-fulfilling-prophecy-3026577},
 language = {english}
 }
 
 @book{Bowles,
 author = {Bowles, Michael},
-title = {Machine Learning in Python -
-Essential Techniques for Predictive Analysis},
+title = {Machine Learning in Python - Essential Techniques for Predictive Analysis},
 publisher = {Wiley},
 year = {2015},
 isbn = {978-1-118-96175-9},
@@ -156,7 +155,7 @@ author = {Schmitz, Andreas},
 title = {Predictive Analytics: 7 praktische Beispiele},
 howpublished = {SAP News Center - Analytics},
 year = {2016},
-note = {Zugegriffen am: 11.06.2020},
+note = {Zugegriffen am: 22.11.2020},
 url = {https://news.sap.com/germany/2016/08/predictive-analytics-in-der-praxis/},
 language = {ngerman}
 }
@@ -166,7 +165,7 @@ author = {Parthasarathy, Sriram},
 title = {What Is Predictive Analytics?},
 howpublished = {Logi Analytics},
 year = {2017},
-note = {Accessed: 02.09.2020},
+note = {Accessed: 22.11.2020},
 url = {https://www.logianalytics.com/predictive-analytics/what-is-predictive-analytics/},
 language = {english}
 }
@@ -176,7 +175,7 @@ author = {Watson, Kylie},
 title = {Predictive analytics in health care - Emerging value and risks},
 howpublished = {Deloitte. Insights},
 year = {2019},
-note = {Accessed: 10.11.2020},
+note = {Accessed: 22.11.2020},
 url = {https://www2.deloitte.com/us/en/insights/topics/analytics/predictive-analytics-health-care-value-risks.html},
 language = {english}
 }
@@ -218,7 +217,8 @@ volume = {19},
 number = {2},
 pages = {256-258},
 year = {2017},
-url = {https://doi.org/10.1108/FS-12-2016-0061},
+issn = {1463-6689},
+IGNORE_url = {https://doi.org/10.1108/FS-12-2016-0061},
 language = {english}
 }
 
@@ -230,7 +230,8 @@ volume = {9},
 number = {1},
 pages = {144-145},
 year = {2016},
-url = {https://doi.org/10.5038/1944-0472.9.1.1519},
+issn = {1944-0472},
+IGNORE_url = {https://doi.org/10.5038/1944-0472.9.1.1519},
 language = {english}
 }
 
@@ -588,5 +589,50 @@ howpublished = {Spektrum.de},
 year = {2020},
 note = {Zugegriffen am: 22.11.2020},
 url = {https://www.spektrum.de/kolumne/wie-das-coronavirus-computer-verwirrt/1744016#Echobox=1595235972?utm_source=pocket-newtab-global-de-DE},
+language = {ngerman}
+}
+
+@article{Karpen,
+author = {Karpen, Samuel and Ellis, Steve},
+title = {{The Application of Classification Trees to Pharmacy School Admissions}},
+journal = {{American journal of pharmaceutical education}},
+volume = {82},
+number = {7},
+pages = {742-745},
+year = {2018},
+issn = {0002-9459},
+language = {english}
+}
+
+@article{Chaurasia,
+author = {Chaurasia, Sushil and Frieda Rosin, Anna},
+title = {{From Big Data to Big Impact: analytics for teaching and learning in higher education}},
+journal = {{Industrial and Commercial Training}},
+volume = {49},
+number = {7/8},
+pages = {321-328},
+year = {2017},
+issn = {0019-7858},
+language = {english}
+}
+
+@article{Herodotou,
+author = {Herodotou, Christothea and Rienties, Bart and Boroowa, Avinash and Zdrahal, Zdenek and Hlosta, Martin},
+title = {{A large‐scale implementation of predictive learning analytics in higher education: the teachers’ role and perspective}},
+journal = {{Educational Technology Research and Development}},
+volume = {67},
+number = {5},
+pages = {1273-1306},
+year = {2019},
+issn = {1556-6501},
+language = {english}
+}
+
+@book{Laux,
+author = {Laux, Helmut and Gillenkirch, Robert and Schenk-Mathes, Heike},
+title = {Entscheidungstheorie},
+publisher = {Springer-Verlag},
+year = {2018},
+isbn = {978-3-662-57818-6},
 language = {ngerman}
 }
