--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -198,7 +198,7 @@ entstehen können (vgl. \cite{Bode}, S.~9).
 Diese Unregelmäßigkeiten können in folgenden Bereichen entstehen (vgl. \cite{Bode}, S.~9-11):
 
 \begin{description}
-\item[Prognose-Delikt:] Welches Art des Delikts wurde konkret vorhergesagt?
+\item[Prognose-Delikt:] Welche Art des Delikts wurde konkret vorhergesagt?
 \item[Prognose-Dauer:] Für welchen Zeitraum wurde die Prognose angefertigt?
 \item[Prognose-Raum:] Zählen Treffer an Gebietsrändern?
 \end{description}
@@ -253,7 +253,7 @@ Variablenreduktion\footnote{
 Die Singulärwertzerlegung ist eine Methode, die ähnlich zur Principal Component Analysis ist.
 } auf 100 Komponenten verkleinert. Diese Komponenten dienten anschließend als Prädiktorvariablen
 für die Vorhersagemodelle. Das Alter wurde beispielsweise mit linearer Regression bestimmt.
-Die Modell konnte mit Hilfe der Informationen aus dem Facebook Profil, dem
+Die Modelle konnten mit Hilfe der Informationen aus dem Facebook Profil, dem
 Profilbild und der Ergebnisse eines psychologischen Tests trainiert werden (Trainingsdatensatz).
 Das Ergebnis der Studie war, dass die Persönlichkeitsmerkmale und Attribute von Personen mit hoher
 Genauigkeit von den Modellen vorhergesagt werden konnten\footnote{
@@ -349,7 +349,7 @@ strengen Einschränkungen beachtet werden.
 \subsection{Predictive Analytics in der Radiologie}
 
 Das Fachgebiet der Radiologie nimmt im Bereich Datenanalysene eine Vorreiterstellung in Deutschland ein (vgl. \cite{Jorzig}, S.~111-112).
-Dabei muss die Radiologie als erste medizinische Fachrichtung den Kontakt mit den Behörden suchen, das der Einsatz
+Dabei muss die Radiologie als erste medizinische Fachrichtung den Kontakt mit den Behörden suchen, da der Einsatz
 dieser Systeme in Deutschland bisher nicht reguliert ist (vgl. \cite{Jorzig}, S.~112).
 
 Diese Sonderposition der Radiologie hängt unter anderem mit dem Problem von \glqq{Zufallsbefunden}\grqq{} zusammen.
@@ -365,7 +365,7 @@ Das System wird mit CT-Bildern als Daten trainiert, wobei auf den Trainingsbilde
 
 Am Beispiel der Radiologie lässt sich erkennen, wie ein Fachgebiet durch äußeren Druck (Haftungsklagen) zur Anwendung von Predictive
 Analytics gedrängt wird. Für den Radiologen können solche Systeme eine Gefahr für seine Arbeit darstellen, wenn sein Tätigkeitsbereich
-zunehmend automatisiert wird. Allerdings ändert der externe Druck die \glqq{Spielregeln}\grqq{} (siehe S~\xcom), sodass
+zunehmend automatisiert wird. Allerdings ändert der externe Druck die \glqq{Spielregeln}\grqq{} (siehe S.~\xcom), sodass
 sich Predictive Analytics zunehmend etabliert.
 
 % TODO Missbrauch -> Proctor
@@ -381,6 +381,8 @@ Der erste Alarm der wegen COVID-19 ausgelöst wurde, kam von einem Computersyste
 %\subsection{Flint Trinkwasserskandal - Fallstudie}
 
 \section{Bildung}
+
+% TODO rosin infancy
 Abschließend sollen noch die Anwendungsmöglichkeiten von Predictive Analytics
 im Bildungssektor kurz skizziert werden.
 
