--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -392,10 +392,43 @@ und einige Forscher arbeiten bereits an neuen Systemen, die bei zukünftigen Pan
 \section{Bildung}
 
 % TODO rosin infancy
-Abschließend sollen noch die Anwendungsmöglichkeiten von Predictive Analytics
-im Bildungssektor präsentiert werden.
+%Abschließend sollen noch die Anwendungsmöglichkeiten von Predictive Analytics
+%im Bildungssektor präsentiert werden.
 
-Eine weitere Anwendung ist E$^2$Coach, ein System zur Studienunterstützung.
+Big Data Anwendungen in der Hochschulbildung befinden sich noch im Anfangsstadium
+(vgl. \cite{Chaurasia}, S.~323). Aus einer Big Data Perspektive existieren aufgrund
+der digitalen Infrastrukturen der Hochschulen viele Daten, die aber ungenutzt bleiben
+(vgl. \cite{Chaurasia}, S.~323).
+
+Predictive Analytics kann dazu genutzt werden, die Zusammensetzung der derzeitigen und früheren Studentenschaft zu
+analysieren und somit die Zielgruppe besser zu verstehen, was zu Verbesserungen in der Marketing Strategie einer
+Hochschule führen kann (vgl. \cite{Chaurasia}, S.~326). Weiterhin kann das Engagement von Studenten anhand von
+Faktoren, wie der Präsenz bei Veranstaltungen, der Anzahl der entliehenen Bücher oder der Aufenthaltszeit in der
+Bibliothek abgeschätzt werden (vgl. \cite{Chaurasia}, S.~326).
+
+Konkrete Anwendungen, die Datenanalysen an Hochschulen unterstützen, werden auch als \emph{Predictive Learning Analytics} (PLA)
+bezeichnet (vgl. \cite{Herodotou}, S.~1273). Das derzeitige Hauptanwendungsfeld ist das Erkennen von Studenten, bei denen
+ein Risiko besteht, dass sie einen Kurs nicht bestehen (vgl. \cite{Herodotou}, S.~1274).
+
+Der folgende Text beschreibt exemplarisch, wie ein solches PLA System in der Praxis funktionieren kann\footnote{
+Herodotou et al. beschreiben hier ihr eigenes System (OU Analyse System) an der Fernhochschule Open University UK
+(vgl. \cite{Herodotou}, S.~1275 and S.~1278).
+}.
+
+Die Daten, die genutzt werden um Risikostudenten zu identifizieren, lassen sich in zwei Kategorien einteilen (vgl. \cite{Herodotou}, S.~1278). 
+Statische Daten beschreiben Attribute, wie Alter, Geschlecht und bisherige Schulbildung. Die Verhaltensdaten dokumentieren die Interaktionen
+des Studenten mit der Plattform für das virtuelle Lernen, VLE (\emph{virtual learning environment}; vgl. \cite{Herodotou}, S.~1274).
+Die Daten werden von den Predictive Analytics Modellen genutzt um Vorhersagen darüber zu machen, ob ein Student seine nächste Hausaufgabe
+einreicht und ob ein Student den Kurs besteht (vgl. \cite{Herodotou}, S.~1278). Der Lehrer kann dann mit Hilfe einer Übersicht auf die
+Daten und Analysen zugreifen (vgl. \cite{Herodotou}, S.~1280). Zwei Funktionalitäten der Übersicht wurden von den Lehrern als besonders nützlich
+eingestuft (vgl. \cite{Herodotou}, S.~1293): die farbliche Hervorhebung der Risikostudenten und die Anzeige der Aktivität der Studenten in
+der VLE Plattform.
+
+Es wurde gezeigt, dass die Arbeit mit der PLA Plattform die Wahrscheinlichkeit erhöht, dass Studenten einen Kurs bestehen
+(vgl. \cite{Herodotou}, S.~1291). Die Kontaktierung und Betreuung von Risikostudenten ist allerdings mit einem erhöhten Aufwand für
+die Lehrkräfte verbunden (vgl. \cite{Herodotou}, S.~1295-1296).
+
+Eine weiteres Beispiel eines Systems zur Studienunterstützung ist E$^2$Coach.
 
 \subsection{University of Michigan E$^2$Coach - Fallstudie}
 
