Dataframe Bild hinzugefügt

--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -897,6 +897,13 @@ Proportional & Gleichheit ($=, \neq$), & Alter, & 21 Jahre \\
 
 \subsubsection{Zusammengesetzte Datentypen}
 
+\begin{figure}%[!hbt]
+\centering
+\caption{Beispiel eines Dataframe}
+\includegraphics[scale=0.9]{Grafiken/Dataframe_Ink.pdf} 
+\label{pic:Dataframe}
+\end{figure}
+
 \subsubsection{Information Management (Data Warehouse)}
 
 
