--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -636,3 +636,12 @@ year = {2018},
 isbn = {978-3-662-57818-6},
 language = {ngerman}
 }
+
+@book{Reese,
+author = {Reese, Joachim and Koch, Stefan},
+title = {{Behavioral Management in Supply Chains}},
+publisher = {Nomos Verlagsgesellschaft},
+year = {2018},
+isbn = {978-3-8452-9192-5},
+language = {ngerman}
+}
