PA Methoden hinzugefügt

--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -54,7 +54,7 @@ includehead,includefoot}}
 % Utopia Schriftart (obsolet)
 %\usepackage{utopia}
 % jetzt... 
-\usepackage{fourier}
+%\usepackage{fourier}
 
 % Farbige Überschriften
 % https://www.overleaf.com/learn/latex/Using_colours_in_LaTeX
