Korrelation und Text Mining

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -645,3 +645,12 @@ year = {2018},
 isbn = {978-3-8452-9192-5},
 language = {ngerman}
 }
+
+@book{Weiss,
+author = {Weiss, Sholom and Indurkhya, Nitin and Zhang, Tong},
+title = {{Fundamentals of Predictive Text Mining}},
+publisher = {Springer},
+year = {2015},
+isbn = {978-1-4471-6750-1},
+language = {english}
+}
